# thread

./: .gitignore  .readthedocs.yml  .style.yapf  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: macosx.yml  push-pull_request.yml  ubuntu.yml  windows.yml
cmake/: ztd.thread-config.cmake.in
documentation/: CMakeLists.txt  Doxyfile.in  requirements.txt
documentation/source/: api.rst  conf.py  design.rst  index.rst  license.rst
documentation/source/_static/: inline_removal.js
documentation/source/design/: alternatives.rst  core.rst
examples/: CMakeLists.txt
examples/source/: basic_name_and_stack_size.c  custom_attribute_arbitrary_fail.c  custom_attribute_guaranteed_order.c  custom_attribute_name.c  handle_unknown_attribute.c  main.c
include/ztd/: thread.h  thread.hpp
include/ztd/thread/: threads.attr.h  threads.h  threads.hpp  threads.native.h  version.h  version.hpp
include/ztd/thread/detail/: api.h  threads.attr.h  threads.pthreads.h  threads.windows.h
source/include/ztd/idk/detail/: threads.pthreads.implementation.h  threads.windows.implementation.h
source/include/ztd/thread/detail/: threads.implementation.h
source/ztd/thread/: threads.c  threads.pthreads.c  threads.windows.c
tests/: CMakeLists.txt
tests/basic_run_time/: CMakeLists.txt
tests/basic_run_time/source/: attr.encoded_name.c.cpp  attr.fail.c.cpp  attr.name.c.cpp  main.cpp  skip_unknown_with_name.c.cpp  threads.c.cpp
tests/inclusion/: CMakeLists.txt
